--- a/_config.yml
+++ b/_config.yml
@@ -995,7 +995,7 @@ issues:
       works for the desired applications, including illustrated explanations and            easily
       reproducible examples.'
     acknowledged: '2016-08-25'
-    online: '2017-11-16'
+    online: '2017-11-28'
     CRANpkgs:
     - haplo.ccs
     - haplo.stats
@@ -1213,6 +1213,70 @@ issues:
     - Phylogenetics
     landing: '2017'
     suppl: 5.1 Kb
+  - slug: RJ-2017-064
+    title: 'carx: an R Package to Estimate Censored Autoregressive Time Series with
+      Exogenous Covariates '
+    bibtitle: |-
+      carx: an R Package to Estimate Censored Autoregressive Time
+                Series with Exogenous Covariates
+    author:
+    - Chao Wang
+    - Kung-Sik Chan
+    bibauthor: Chao Wang and Kung-Sik Chan
+    abstract: '  Abstract We implement in the R package carx a novel and computationally
+      efficient quasi-likelihood            method for estimating a censored autoregressive
+      model with exogenous covariates. The proposed            quasi-likelihood method
+      reduces to maximum likelihood estimation in absence of censoring. The carx            package
+      contains many useful functions for practical data analysis with censored stochastic
+      regression,            including functions for outlier detection, model diagnostics,
+      and prediction with censored time series            data. We illustrate the
+      capabilities of the carx package with simulations and an elaborate real data            analysis.'
+    acknowledged: '2017-03-10'
+    online: '2017-11-28'
+    CRANpkgs:
+    - censReg
+    - AER
+    - NADA
+    - VGAM
+    - MCMCpack
+    - cents
+    - ARCensReg
+    - carx
+    - xts
+    - TSA
+    CTV_rev:
+    - Survival
+    - TimeSeries
+    - Econometrics
+    - Distributions
+    - Multivariate
+    - Psychometrics
+    - Bayesian
+    - Environmetrics
+    - ExtremeValue
+    - Finance
+    - SocialSciences
+    - SpatioTemporal
+    landing: '2017'
+    suppl: 2.9 Kb
+  - slug: RJ-2017-065
+    title: 'An Introduction to Rocker: Docker Containers for R'
+    bibtitle: 'An Introduction to Rocker: Docker Containers for R'
+    author:
+    - Carl Boettiger
+    - Dirk Eddelbuettel
+    bibauthor: Carl Boettiger and Dirk Eddelbuettel
+    abstract: '  Abstract We describe the Rocker project, which provides a widely-used
+      suite of Docker images with            customized R environments for particular
+      tasks. We discuss how this suite is organized, and how these            tools
+      can increase portability, scaling, reproducibility, and convenience of R users
+      and developers.'
+    acknowledged: '2017-10-12'
+    online: '2017-11-27'
+    CRANpkgs:
+    - rhub
+    - tidyverse
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
