--- a/_config.yml
+++ b/_config.yml
@@ -1272,10 +1272,12 @@ issues:
       can increase portability, scaling, reproducibility, and convenience of R users
       and developers.'
     acknowledged: '2017-10-12'
-    online: '2017-11-27'
+    online: '2017-11-29'
     CRANpkgs:
+    - packrat
     - rhub
     - tidyverse
+    CTV_rev: ReproducibleResearch
     landing: '2017'
 - issue: 2009-1
   year: 2009
