--- a/_config.yml
+++ b/_config.yml
@@ -1279,6 +1279,73 @@ issues:
     - tidyverse
     CTV_rev: ReproducibleResearch
     landing: '2017'
+  - slug: RJ-2017-066
+    title: glmmTMB balances speed and flexibility among packages for zero-inflated
+      generalized linear mixed modeling
+    bibtitle: |-
+      glmmTMB balances speed and flexibility among packages for
+                zero-inflated generalized linear mixed modeling
+    author:
+    - Mollie E. Brooks
+    - Kasper Kristensen
+    - Koen J. van Benthem
+    - Arni Magnusson
+    - Casper W. Berg
+    - '           Anders Nielsen'
+    - Hans J. Skaug
+    - Martin Mächler
+    - Benjamin M. Bolker
+    bibauthor: |-
+      Mollie E. Brooks and Kasper Kristensen and Koen J. van
+                Benthem and Arni Magnusson and Casper W. Berg and Anders
+                Nielsen and Hans J. Skaug and Martin Mächler and Benjamin M.
+                Bolker
+    abstract: '  Abstract Count data can be analyzed using generalized linear mixed
+      models when observations            are correlated in ways that require random
+      effects. However, count data are often zero-inflated,            containing
+      more zeros than would be expected from the typical error distributions. We present
+      a new            package, glmmTMB, and compare it to other R packages that fit
+      zero-inflated mixed models. The            glmmTMB package fits many types of
+      GLMMs and extensions, including models with continuously            distributed
+      responses, but here we focus on count responses. glmmTMB is faster than glmmADMB,            MCMCglmm,
+      and brms, and more flexible than INLA and mgcv for zero-inflated modeling. One            unique
+      feature of glmmTMB (among packages that fit zero-inflated mixed models) is its
+      ability to            estimate the Conway-Maxwell-Poisson distribution parameterized
+      by the mean. Overall, its most            appealing features for new users may
+      be the combination of speed and its interface’s similarity to            lme4.'
+    acknowledged: '2017-05-29'
+    online: '2017-12-01'
+    CRANpkgs:
+    - glmmTMB
+    - pscl
+    - INLA
+    - MCMCglmm
+    - glmmADMB
+    - mgcv
+    - brms
+    - gamlss
+    - flexmix
+    - MXM
+    - VGAM
+    - mgcv
+    - glmmTMB
+    - TMB
+    - devtools
+    CTV_rev:
+    - Econometrics
+    - Environmetrics
+    - SocialSciences
+    - Bayesian
+    - Psychometrics
+    - Survival
+    - Cluster
+    - Distributions
+    - ExtremeValue
+    - MachineLearning
+    - Multivariate
+    - Phylogenetics
+    landing: '2017'
+    suppl: 5.8 Kb
 - issue: 2009-1
   year: 2009
   volume: 1
