--- a/_config.yml
+++ b/_config.yml
@@ -1344,6 +1344,68 @@ issues:
     - Phylogenetics
     landing: '2017'
     suppl: 5.8 Kb
+  - slug: RJ-2017-067
+    title: 'RQGIS: Integrating R with QGIS for Statistical Geocomputing'
+    bibtitle: 'RQGIS: Integrating R with QGIS for Statistical Geocomputing'
+    author:
+    - Jannes Muenchow
+    - Patrick Schratz
+    - Alexander Brenning
+    bibauthor: Jannes Muenchow and Patrick Schratz and Alexander Brenning
+    abstract: '  Abstract Integrating R with geographic information systems (GIS)
+      extends R’s statistical capabilities            with numerous geoprocessing
+      and data handling tools available in a GIS. QGIS is one of the most            popular
+      open-source GIS, and it furthermore integrates other GIS programs such as the
+      system            for automated geoscientific analyses (SAGA) GIS and the geographic
+      resources analysis support            systems (GRASS) GIS within a single software
+      environment. This and its QGIS Python API makes            it a perfect candidate
+      for console-based geoprocessing. By establishing an interface, the R package            RQGIS
+      makes it possible to use QGIS as a geoprocessing workhorse from within R. Compared
+      to            other packages building a bridge to GIS (e.g., rgrass7, RSAGA,
+      RPyGeo), RQGIS offers a wider            range of geoalgorithms, and is often
+      easier to use due to various convenience functions. Finally,            RQGIS
+      supports the seamless integration of Python code using reticulate from within
+      R for improved            extendability.'
+    acknowledged: '2017-07-07'
+    online: '2017-12-04'
+    CRANpkgs:
+    - maptools
+    - raster
+    - sp
+    - sf
+    - mapview
+    - mapmisc
+    - osmar
+    - dodgr
+    - RArcInfo
+    - rgrass7
+    - mapedit
+    - rgdal
+    - rgeos
+    - RQGIS
+    - rPython
+    - sperrorest
+    - nlme
+    - mgcv
+    - spgrass6
+    - RQGIS
+    - RSAGA
+    - leaflet
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    - Econometrics
+    - Environmetrics
+    - SocialSciences
+    - Bayesian
+    - ChemPhys
+    - Finance
+    - NumericalMathematics
+    - OfficialStatistics
+    - Psychometrics
+    - WebTechnologies
+    landing: '2017'
+    suppl: 1.9 Kb
 - issue: 2009-1
   year: 2009
   volume: 1
