--- a/_config.yml
+++ b/_config.yml
@@ -1406,6 +1406,42 @@ issues:
     - WebTechnologies
     landing: '2017'
     suppl: 1.9 Kb
+  - slug: RJ-2017-068
+    title: 'rpsftm: An R Package for Rank Preserving Structural Failure Time Models'
+    bibtitle: |-
+      rpsftm: An R Package for Rank Preserving Structural Failure
+                Time Models
+    author:
+    - Annabel Allison
+    - Ian R White
+    - Simon Bond
+    bibauthor: Annabel Allison and Ian R White and Simon Bond
+    abstract: '  Abstract                Treatment switching in a randomised controlled
+      trial occurs when participants change from their            randomised treatment
+      to the other trial treatment during the study. Failure to account for treatment            switching
+      in the analysis (i.e. by performing a standard intention-to-treat analysis)
+      can lead to biased            estimates of treatment efficacy. The rank preserving
+      structural failure time model (RPSFTM) is a            method used to adjust
+      for treatment switching in trials with survival outcomes. The RPSFTM is due
+      to            Robins and Tsiatis (1991) and has been developed by White et al.
+      (1997, 1999).                The method is randomisation based and uses only
+      the randomised treatment group, observed            event times, and treatment
+      history in order to estimate a causal treatment effect. The treatment effect,            ψ,
+      is estimated by balancing counter-factual event times (that would be observed
+      if no treatment            were received) between treatment groups. G-estimation
+      is used to find the value of ψ such that a test            statistic Z (ψ) =
+      0. This is usually the test statistic used in the intention-to-treat analysis,
+      for example,            the log rank test statistic.                We present
+      an R package that implements the method of rpsftm.'
+    acknowledged: '2017-04-27'
+    online: '2017-12-04'
+    CRANpkgs:
+    - ipw
+    - rpsftm
+    - eha
+    CTV_rev: Survival
+    landing: '2017'
+    suppl: 646 bytes
 - issue: 2009-1
   year: 2009
   volume: 1
