--- a/_config.yml
+++ b/_config.yml
@@ -1352,12 +1352,12 @@ issues:
     - Patrick Schratz
     - Alexander Brenning
     bibauthor: Jannes Muenchow and Patrick Schratz and Alexander Brenning
-    abstract: '  Abstract Integrating R with geographic information systems (GIS)
+    abstract: '  Abstract Integrating R with Geographic Information Systems (GIS)
       extends R’s statistical capabilities            with numerous geoprocessing
       and data handling tools available in a GIS. QGIS is one of the most            popular
       open-source GIS, and it furthermore integrates other GIS programs such as the
-      system            for automated geoscientific analyses (SAGA) GIS and the geographic
-      resources analysis support            systems (GRASS) GIS within a single software
+      System for            Automated Geoscientific Analyses (SAGA) GIS and the Geographic
+      Resources Analysis Support            System (GRASS) GIS within a single software
       environment. This and its QGIS Python API makes            it a perfect candidate
       for console-based geoprocessing. By establishing an interface, the R package            RQGIS
       makes it possible to use QGIS as a geoprocessing workhorse from within R. Compared
@@ -1367,7 +1367,7 @@ issues:
       supports the seamless integration of Python code using reticulate from within
       R for improved            extendability.'
     acknowledged: '2017-07-07'
-    online: '2017-12-04'
+    online: '2017-12-05'
     CRANpkgs:
     - maptools
     - raster
@@ -1378,29 +1378,26 @@ issues:
     - osmar
     - dodgr
     - RArcInfo
-    - rgrass7
     - mapedit
     - rgdal
     - rgeos
-    - RQGIS
+    - reticulate
     - rPython
     - sperrorest
     - nlme
     - mgcv
     - spgrass6
-    - RQGIS
-    - RSAGA
     - leaflet
     CTV_rev:
     - Spatial
     - SpatioTemporal
     - Econometrics
     - Environmetrics
+    - NumericalMathematics
     - SocialSciences
     - Bayesian
     - ChemPhys
     - Finance
-    - NumericalMathematics
     - OfficialStatistics
     - Psychometrics
     - WebTechnologies
