--- a/_config.yml
+++ b/_config.yml
@@ -1432,16 +1432,16 @@ issues:
       is used to find the value of ψ such that a test            statistic Z (ψ) =
       0. This is usually the test statistic used in the intention-to-treat analysis,
       for example,            the log rank test statistic.                We present
-      an R package that implements the method of rpsftm.'
+      an R package, rpsftm, that implements the method.'
     acknowledged: '2017-04-27'
-    online: '2017-12-04'
+    online: '2017-12-08'
     CRANpkgs:
     - ipw
     - rpsftm
     - eha
     CTV_rev: Survival
     landing: '2017'
-    suppl: 646 bytes
+    suppl: 678 bytes
 - issue: 2009-1
   year: 2009
   volume: 1
