--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ issues:
       and word embeddings. The package currently supports input text in English, German,            French,
       and Spanish.'
     acknowledged: '2017-03-27'
-    online: '2017-06-28'
+    online: '2017-12-10'
     CRANpkgs:
     - dplyr
     - ggplot2
@@ -552,7 +552,7 @@ issues:
       hazards models, generalized additive models, robust regression models,            and
       many more.'
     acknowledged: '2016-09-12'
-    online: '2017-10-24'
+    online: '2017-12-10'
     CRANpkgs:
     - visreg
     - rms
@@ -1279,11 +1279,11 @@ issues:
     CTV_rev: ReproducibleResearch
     landing: '2017'
   - slug: RJ-2017-066
-    title: glmmTMB balances speed and flexibility among packages for zero-inflated
-      generalized linear mixed modeling
+    title: glmmTMB Balances Speed and Flexibility Among Packages for Zero-inflated
+      Generalized Linear Mixed Modeling
     bibtitle: |-
-      glmmTMB balances speed and flexibility among packages for
-                zero-inflated generalized linear mixed modeling
+      glmmTMB Balances Speed and Flexibility Among Packages for
+                Zero-inflated Generalized Linear Mixed Modeling
     author:
     - Mollie E. Brooks
     - Kasper Kristensen
@@ -1311,15 +1311,14 @@ issues:
       feature of glmmTMB (among packages that fit zero-inflated mixed models) is its
       ability to            estimate the Conway-Maxwell-Poisson distribution parameterized
       by the mean. Overall, its most            appealing features for new users may
-      be the combination of speed and its interface’s similarity to            lme4.'
+      be the combination of speed, flexibility, and its interface’s            similarity
+      to lme4.'
     acknowledged: '2017-05-29'
-    online: '2017-12-01'
+    online: '2017-12-10'
     CRANpkgs:
     - glmmTMB
     - pscl
-    - INLA
     - MCMCglmm
-    - glmmADMB
     - mgcv
     - brms
     - gamlss
@@ -1343,7 +1342,7 @@ issues:
     - Multivariate
     - Phylogenetics
     landing: '2017'
-    suppl: 5.8 Kb
+    suppl: 5 Kb
   - slug: RJ-2017-067
     title: 'RQGIS: Integrating R with QGIS for Statistical Geocomputing'
     bibtitle: 'RQGIS: Integrating R with QGIS for Statistical Geocomputing'
