--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ issues:
       and word embeddings. The package currently supports input text in English, German,            French,
       and Spanish.'
     acknowledged: '2017-03-27'
-    online: '2017-12-10'
+    online: '2017-12-11'
     CRANpkgs:
     - dplyr
     - ggplot2
@@ -108,6 +108,7 @@ issues:
     - Phylogenetics
     - Survival
     landing: '2017'
+    suppl: 3.4 Kb
   - slug: RJ-2017-036
     title: Discrete Time Markov Chains with R
     bibtitle: Discrete Time Markov Chains with R
