2017-2 draft with suppl

--- a/_config.yml
+++ b/_config.yml
@@ -11104,7 +11104,7 @@ issues:
   year: 2017
   volume: 9
   num: 2
-  month: Dec.
+  month: December
   bibmonth: dec
   articles:
   - slug: editorial
@@ -11167,6 +11167,7 @@ issues:
     - Phylogenetics
     - SocialSciences
     - TimeSeries
+    suppl: 489 bytes
     landing: '2017'
     pages:
     - 6
@@ -11485,6 +11486,7 @@ issues:
     - simmer
     - queuecomputer
     - queueing
+    suppl: 1.8 Kb
     landing: '2017'
     pages:
     - 116
@@ -11527,6 +11529,7 @@ issues:
     - gR
     - HighPerformanceComputing
     - Survival
+    suppl: 1.6 Kb
     landing: '2017'
     pages:
     - 127
@@ -11718,6 +11721,7 @@ issues:
     - Robust
     - SocialSciences
     - SpatioTemporal
+    suppl: 3.4 Kb
     landing: '2017'
     pages:
     - 198
@@ -11766,6 +11770,7 @@ issues:
     - Finance
     - SocialSciences
     - SpatioTemporal
+    suppl: 2.3 Kb
     landing: '2017'
     pages:
     - 213
@@ -11810,6 +11815,7 @@ issues:
     - Psychometrics
     - Robust
     - SocialSciences
+    suppl: 689 bytes
     landing: '2017'
     pages:
     - 232
@@ -11867,6 +11873,7 @@ issues:
     - MachineLearning
     - Phylogenetics
     - Survival
+    suppl: 3.4 Kb
     landing: '2017'
     pages:
     - 248
@@ -11907,6 +11914,7 @@ issues:
     CTV_rev:
     - Distributions
     - Survival
+    suppl: 4.5 Kb
     landing: '2017'
     pages:
     - 268
@@ -11953,6 +11961,7 @@ issues:
     - Graphics
     - Optimization
     - Phylogenetics
+    suppl: 1.5 Kb
     landing: '2017'
     pages:
     - 291
@@ -12007,6 +12016,7 @@ issues:
     - Finance
     - Multivariate
     - Spatial
+    suppl: 1.2 Kb
     landing: '2017'
     pages:
     - 309
@@ -12062,6 +12072,7 @@ issues:
     - Finance
     - HighPerformanceComputing
     - NumericalMathematics
+    suppl: 950 bytes
     landing: '2017'
     pages:
     - 329
@@ -12100,6 +12111,7 @@ issues:
     - rpsftm
     - eha
     CTV_rev: Survival
+    suppl: 678 bytes
     landing: '2017'
     pages:
     - 342
@@ -12146,6 +12158,7 @@ issues:
     - magrittr
     - tidyverse
     CTV_rev: WebTechnologies
+    suppl: 909 bytes
     landing: '2017'
     pages:
     - 354
@@ -12182,6 +12195,7 @@ issues:
     CRANpkgs:
     - rTableICC
     - FunChisq
+    suppl: 3.4 Kb
     landing: '2017'
     pages:
     - 366
@@ -12250,6 +12264,7 @@ issues:
     - MachineLearning
     - Multivariate
     - Phylogenetics
+    suppl: 5 Kb
     landing: '2017'
     pages:
     - 378
@@ -12285,6 +12300,7 @@ issues:
     CTV_rev:
     - Graphics
     - Phylogenetics
+    suppl: 1.6 Kb
     landing: '2017'
     pages:
     - 401
@@ -12351,6 +12367,7 @@ issues:
     - OfficialStatistics
     - Psychometrics
     - WebTechnologies
+    suppl: 1.9 Kb
     landing: '2017'
     pages:
     - 409
@@ -12374,6 +12391,7 @@ issues:
     - hyper2
     - aylmer
     CTV_rev: Distributions
+    suppl: 1 Kb
     landing: '2017'
     pages:
     - 429
@@ -12423,6 +12441,7 @@ issues:
     - SocialSciences
     - ClinicalTrials
     - ReproducibleResearch
+    suppl: 1.7 Kb
     landing: '2017'
     pages:
     - 440
@@ -12465,6 +12484,7 @@ issues:
     CTV_rev:
     - WebTechnologies
     - NumericalMathematics
+    suppl: 570 bytes
     landing: '2017'
     pages:
     - 461
@@ -12536,6 +12556,7 @@ issues:
     - Bayesian
     - gR
     - Survival
+    suppl: 1.2 Kb
     landing: '2017'
     pages:
     - 487
@@ -12575,6 +12596,7 @@ issues:
     - Graphics
     - HighPerformanceComputing
     - Phylogenetics
+    suppl: 5.1 Kb
     landing: '2017'
     pages:
     - 499
@@ -12619,6 +12641,7 @@ issues:
     - Graphics
     - OfficialStatistics
     - WebTechnologies
+    suppl: 11.2 Kb
     landing: '2017'
     pages:
     - 520
