--- a/_config.yml
+++ b/_config.yml
@@ -12691,21 +12691,21 @@ issues:
     - 540
   - slug: forwards
     author:
-    - Heather Turner
     - Stella Bollmann
     - Dianne Cook
     - Jasmine Dumas
     - John Fox
     - Julie Josse
-    - Oliver           Keyes
-    - Carolin Strobl
+    - Oliver Keyes
+    - Carolin           Strobl
+    - Heather Turner
     - Rudolf Debelak
     title: Forwards Column
     bibtitle: Forwards Column
     bibauthor: |-
-      Heather Turner and Stella Bollmann and Dianne Cook and
-                Jasmine Dumas and John Fox and Julie Josse and Oliver Keyes
-                and Carolin Strobl and Rudolf Debelak
+      Stella Bollmann and Dianne Cook and Jasmine Dumas and John
+                Fox and Julie Josse and Oliver Keyes and Carolin Strobl and
+                Heather Turner and Rudolf Debelak
     pages:
     - 541
     - 552
