--- a/_config.yml
+++ b/_config.yml
@@ -11104,7 +11104,7 @@ issues:
   year: 2017
   volume: 9
   num: 2
-  month: December
+  month: Dec.
   bibmonth: dec
   articles:
   - slug: editorial
