add -034, update a few others

--- a/_config.yml
+++ b/_config.yml
@@ -777,10 +777,11 @@ issues:
       A simulation study is also conducted to give recommendations for applied            researchers
       on the selection of appropriate one-way tests under assumption violations. Furthermore,            especially
       for non-R users, a user-friendly web application of the package is provided.
-      This application            is available at http://www.biosoft.hacettepe.edu.tr/onewaytests.'
+      This application            is available at http://www.softmed.hacettepe.edu.tr/onewaytests.'
     acknowledged: '2017-06-14'
     online: '2018-05-21'
     CRANpkgs:
+    - onewaytests
     - onewaytests
     - stats
     suppl: 1.1 Kb
@@ -1165,6 +1166,65 @@ issues:
     - SocialSciences
     - SpatioTemporal
     suppl: 1.4 Kb
+    landing: '2018'
+  - slug: RJ-2018-034
+    title: 'ICSOutlier: Unsupervised Outlier Detection for Low-Dimensional Contamination
+      Structure'
+    bibtitle: |-
+      ICSOutlier: Unsupervised Outlier Detection for Low-
+                Dimensional Contamination Structure
+    author:
+    - Aurore Archimbaud
+    - Klaus Nordhausen
+    - Anne Ruiz-Gazen
+    bibauthor: Aurore Archimbaud and Klaus Nordhausen and Anne Ruiz-Gazen
+    abstract: '  Abstract Detecting outliers in a multivariate and unsupervised context
+      is an important and ongoing            problem notably for quality control.
+      Many statistical methods are already implemented in R and            are briefly
+      surveyed in the present paper. But only a few lead to the accurate identification
+      of            potential outliers in the case of a small level of contamination.
+      In this particular context, the Invariant            Coordinate Selection (ICS)
+      method shows remarkable properties for identifying outliers that lie on            a
+      low-dimensional subspace in its first invariant components. It is implemented
+      in the ICSOutlier            package. The main function of the package, ics.outlier,
+      offers the possibility of labelling potential            outliers in a completely
+      automated way. Four examples, including two real examples in quality control,            illustrate
+      the use of the function. Comparing with several other approaches, it appears
+      that ICS is            generally as efficient as its competitors and shows an
+      advantage in the context of a small proportion of            outliers lying
+      in a low-dimensional subspace. In quality control, the method may help in properly            identifying
+      some defective products while not detecting too many false positives.'
+    acknowledged: '2017-06-29'
+    online: '2018-05-30'
+    CRANpkgs:
+    - mvoutlier
+    - CerioliOutlierDetection
+    - rrcovHD
+    - faoutlier
+    - abodOutlier
+    - HighDimOut
+    - alphaOutlier
+    - extremevalues
+    - HDoutliers
+    - outliers
+    - DMwR2
+    - ldbod
+    - Rlof
+    - depth
+    - REPPlab
+    - OutlierDC
+    - pcadapt
+    - rrcov
+    - ICSOutlier
+    - ICS
+    - robustbase
+    CTV_rev:
+    - Robust
+    - Multivariate
+    - OfficialStatistics
+    - Psychometrics
+    - Survival
+    suppl: 3.1 Kb
     landing: '2018'
 - issue: 2009-1
   year: 2009
