--- a/_config.yml
+++ b/_config.yml
@@ -1226,6 +1226,40 @@ issues:
     - Survival
     suppl: 3.1 Kb
     landing: '2018'
+  - slug: RJ-2018-035
+    title: 'RatingScaleReduction package: stepwise rating scale item reduction without
+      predictability loss'
+    bibtitle: |-
+      RatingScaleReduction package: stepwise rating scale item
+                reduction without predictability loss
+    author:
+    - Waldemar W. Koczkodaj
+    - Feng Li
+    - Alicja Wolny–Dominiak
+    bibauthor: Waldemar W. Koczkodaj and Feng Li and Alicja Wolny–Dominiak
+    abstract: '  Abstract This study presents an innovative method for reducing the
+      number of rating scale items            without predictability loss. The “area
+      under the receiver operator curve” method (AUC ROC) is used            for the
+      stepwise method of reducing items of a rating scale. RatingScaleReduction R
+      package contains            the presented implementation. Differential evolution
+      (a metaheuristic for optimization) was applied            to one of the analyzed
+      datasets to illustrate that the presented stepwise method can be used with other            classifiers
+      to reduce the number of rating scale items (variables). The targeted areas of
+      application are            decision making, data mining, machine learning, and
+      psychometrics.            Keywords: rating scale, receiver operator characteristic,
+      ROC, AUC, scale reduction.'
+    acknowledged: '2017-03-20'
+    online: '2018-06-01'
+    CRANpkgs:
+    - RatingScaleReduction
+    - pROC
+    - ROCR
+    - DEoptim
+    CTV_rev:
+    - MachineLearning
+    - Multivariate
+    - Optimization
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
