--- a/_config.yml
+++ b/_config.yml
@@ -1260,6 +1260,44 @@ issues:
     - Multivariate
     - Optimization
     landing: '2018'
+  - slug: RJ-2018-036
+    title: Small Area Disease Risk Estimation and Visualization Using R
+    bibtitle: Small Area Disease Risk Estimation and Visualization Using R
+    author: Paula Moraga
+    bibauthor: Paula Moraga
+    abstract: '  Abstract Small area disease risk estimation is essential for disease
+      prevention and control. In this            paper, we demonstrate how R can be
+      used to obtain disease risk estimates and quantify risk factors            using
+      areal data. We explain how to define disease risk models and how to perform
+      Bayesian inference            using the INLA package. We also show how to make
+      interactive maps of estimates using the leaflet            package to better
+      understand the disease spatial patterns and communicate the results. We show
+      an            example of lung cancer risk in Pennsylvania, United States, in
+      year 2002, and demonstrate that R            represents an excellent tool for
+      disease surveillance by enabling reproducible health data analysis.'
+    acknowledged: '2018-02-03'
+    online: '2018-06-07'
+    CRANpkgs:
+    - leaflet
+    - SpatialEpi
+    - spdep
+    - ggplot2
+    - flexdashboard
+    - shiny
+    - SpatialEpiApp
+    - dygraphs
+    - DT
+    - rmarkdown
+    CTV_rev:
+    - ReproducibleResearch
+    - Spatial
+    - Econometrics
+    - Graphics
+    - Phylogenetics
+    - TimeSeries
+    - WebTechnologies
+    suppl: 1.7 Kb
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
