--- a/_config.yml
+++ b/_config.yml
@@ -380,6 +380,7 @@ issues:
     online: '2018-05-16'
     CRANpkgs:
     - cchs
+    - cchs
     - survival
     - survey
     - NestedCohort
@@ -1297,6 +1298,61 @@ issues:
     - TimeSeries
     - WebTechnologies
     suppl: 1.7 Kb
+    landing: '2018'
+  - slug: RJ-2018-037
+    title: 'Collections in R: Review and Proposal'
+    bibtitle: 'Collections in R: Review and Proposal'
+    author: Timothy Barry
+    bibauthor: Timothy Barry
+    abstract: '  Abstract R is a powerful tool for data processing, visualization,
+      and modeling. However, R is slower            than other languages used for
+      similar purposes, such as Python. One reason for this is that R lacks            base
+      support for collections, abstract data types that store, manipulate, and return
+      data (e.g., sets,            maps, stacks). An exciting recent trend in the
+      R extension ecosystem is the development of collection            packages,
+      packages that provide classes that implement common collections. At least 12
+      collection            packages are available across the two major R extension
+      repositories, the Comprehensive R Archive            Network (CRAN) and Bioconductor.
+      In this article, we compare collection packages in terms of their            features,
+      design philosophy, ease of use, and performance on benchmark tests. We demonstrate
+      that,            when used well, the data structures provided by collection
+      packages are in many cases significantly            faster than the data structures
+      provided by base R. We also highlight current deficiencies among            R
+      collection packages and propose avenues of possible improvement. This article
+      provides useful            recommendations to R programmers seeking to speed
+      up their programs and aims to inform the            development of future collection-oriented
+      software for R.'
+    acknowledged: '2017-11-05'
+    online: '2018-06-13'
+    CRANpkgs:
+    - Rcpp
+    - hashr
+    - hashFunction
+    - filehashSQLite
+    - tictoc
+    - DSL
+    - bit64
+    - bit
+    - Oarray
+    - sets
+    - filehash
+    - hash
+    - hashmap
+    - rstackdeque
+    - rstack
+    - liqueueR
+    - dequer
+    - flifo
+    - listenv
+    - stdvectors
+    - microbenchmark
+    - neuroim
+    - FindMinIC
+    BIOpkgs: S4Vectors
+    CTV_rev:
+    - HighPerformanceComputing
+    - MedicalImaging
+    - NumericalMathematics
     landing: '2018'
 - issue: 2009-1
   year: 2009
