--- a/_config.yml
+++ b/_config.yml
@@ -365,17 +365,17 @@ issues:
     bibauthor: Edmund Jones
     abstract: '  Abstract The cchs package contains a function, also called cchs,
       for analyzing data from a stratified            case–cohort study, as used in
-      epidemiology. For data from a stratified case–cohort study, cchs            calculates
-      Estimator III of Ørnulf Borgan et al. (2000), which is a score-unbiased estimator
-      for the            regression coefficients in the Cox proportional hazards model.
-      From the user’s point of view the            function is similar to coxph and
-      other widely used model-fitting functions. Convenient software            was
-      not previously available for Estimator III because it is complicated to calculate.
-      SAS and S-Plus            code-fragments for the calculation have been published
-      (Langholz and Jiao, 2007a; Cologne et al.,            2012), but cchs is much
-      easier to use on new datasets, and works differently so that it is far more            efficient
-      in terms of time and memory and can cope with much bigger datasets. It also
-      avoids several            minor approximations and simplifications.'
+      epidemiology. For data from a stratified case–cohort study, cchs calculates            Estimator
+      III of Borgan et al. (2000), which is a score-unbiased estimator for the regression
+      coefficients            in the Cox proportional hazards model. From the user’s
+      point of view the function is similar to coxph            and other widely used
+      model-fitting functions. Convenient software was not previously available for            Estimator
+      III because it is complicated to calculate. SAS and S-Plus code-fragments for
+      the calculation            have been published (Langholz and Jiao, 2007a; Cologne
+      et al., 2012), but cchs is much easier to use            on new datasets, and
+      works differently so that it is far more efficient in terms of time and memory
+      and            can cope with much bigger datasets. It also avoids several minor
+      approximations and simplifications.'
     acknowledged: '2017-12-28'
     online: '2018-05-16'
     CRANpkgs:
@@ -1353,6 +1353,74 @@ issues:
     - HighPerformanceComputing
     - MedicalImaging
     - NumericalMathematics
+    landing: '2018'
+  - slug: RJ-2018-038
+    title: 'mmpf: Monte-Carlo Methods for Prediction Functions'
+    bibtitle: 'mmpf: Monte-Carlo Methods for Prediction Functions'
+    author: Zachary M. Jones
+    bibauthor: Zachary M. Jones
+    abstract: '  Abstract Machine learning methods can often learn high-dimensional
+      functions which generalize well            but are not human interpretable.
+      mmpf marginalizes prediction functions using Monte-Carlo methods,            allowing
+      users to investigate the behavior of these learned functions as on a lower dimensional
+      subset            of input features: partial dependence and variations thereof.
+      This makes machine learning methods            more useful in situations where
+      accurate prediction is not the only goal, such as in the social sciences            where
+      linear models are commonly used because of their interpretability.                 Many
+      methods for estimating prediction functions produce estimated functions which
+      are not            directly human-interpretable because of their complexity:
+      they may include high-dimensional inter           actions and/or complex nonlinearities.
+      While a learning method’s capacity to automatically learn            interactions
+      and nonlinearities is attractive when the goal is prediction, there are many
+      cases where            users want good predictions and the ability to understand
+      how predictions depend on the features.            mmpf implements general methods
+      for interpreting prediction functions using Monte-Carlo methods.            These
+      methods allow any function which generates predictions to be be interpreted.
+      mmpf is currently            used in other packages for machine learning like
+      edarf and mlr (Jones and Linder, 2016; Bischl et al.,            2016).'
+    acknowledged: '2017-04-17'
+    online: '2018-06-29'
+    landing: '2018'
+  - slug: RJ-2018-039
+    title: "dimRed and coRanking\x13Unifying Dimensionality Reduction in R"
+    bibtitle: "dimRed and coRanking\x13Unifying Dimensionality Reduction in R"
+    author:
+    - Guido Kraemer
+    - Markus Reichstein
+    - Miguel D. Mahecha
+    bibauthor: Guido Kraemer and Markus Reichstein and Miguel D. Mahecha
+    abstract: '  Abstract “Dimensionality reduction” (DR) is a widely used approach
+      to find low dimensional and            interpretable representations of data
+      that are natively embedded in high-dimensional spaces. DR can            be
+      realized by a plethora of methods with different properties, objectives and
+      hence (dis)advantages,            resulting low-dimensional data embeddings
+      are often difficult to compare with objective criteria. Here,            we
+      introduce the dimRed and coRanking packages for the R language. These open source
+      software            packages enable users to easily access multiple classical
+      and advanced DR methods using a common            interface. The packages also
+      provide quality indicators for the embeddings and easy visualization            of
+      high dimensional data. coRanking provides the functionality for assessing DR
+      methods in the            co-ranking matrix framework. In tandem, these packages
+      allow for uncovering complex structures            high dimensional data. Currently
+      15 DR methods are available in the package, some of which were            not
+      previously available to R users. Here, we outline the dimRed and coRanking packages
+      and make            the implemented methods understandable to the interested
+      reader.'
+    acknowledged: '2017-08-14'
+    online: '2018-06-29'
+    CRANpkgs:
+    - dimRed
+    - coRanking
+    - RANN
+    - igraph
+    - Rtsne
+    - DRR
+    BIOpkgs: pcaMethods
+    CTV_rev:
+    - gR
+    - Graphics
+    - Optimization
+    - Spatial
     landing: '2018'
 - issue: 2009-1
   year: 2009
