trying to fix RSS issue

--- a/_config.yml
+++ b/_config.yml
@@ -13671,8 +13671,8 @@ issues:
     - 328
     - 341
   - slug: RJ-2018-039
-    title: "dimRed and coRanking\x14Unifying Dimensionality Reduction in R"
-    bibtitle: "dimRed and coRanking\x14Unifying Dimensionality Reduction in R"
+    title: "dimRed and coRanking - Unifying Dimensionality Reduction in R"
+    bibtitle: "dimRed and coRanking - Unifying Dimensionality Reduction in R"
     author:
     - Guido Kraemer
     - Markus Reichstein
