trying to fix RSS issue

--- a/_config.yml
+++ b/_config.yml
@@ -13672,7 +13672,7 @@ issues:
     - 341
   - slug: RJ-2018-039
     title: "dimRed and coRanking - Unifying Dimensionality Reduction in R"
-    bibtitle: "dimRed and coRanking - Unifying Dimensionality Reduction in R"
+    bibtitle: "dimRed and coRanking---Unifying Dimensionality Reduction in R"
     author:
     - Guido Kraemer
     - Markus Reichstein
