put accepted articles online

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,128 @@
 markdown: kramdown
 issues:
 - issue: accepted
-  articles: []
+  articles:
+  - slug: RJ-2018-040
+    title: Profile Likelihood Estimation of the Correlation Coefficient in the Presence
+      of Left, Right or Interval Censoring and Missing Data
+    bibtitle: |-
+      Profile Likelihood Estimation of the Correlation Coefficient
+                in the Presence of Left, Right or Interval Censoring and
+                Missing Data
+    author:
+    - Yanming Li
+    - Brenda W. Gillespie
+    - Kerby Shedden
+    - John A. Gillespie
+    bibauthor: |-
+      Yanming Li and Brenda W. Gillespie and Kerby Shedden and
+                John A. Gillespie
+    abstract: '  Abstract We discuss implentation of a profile likelihood method for
+      estimating a Pearson correlation            coefficient from bivariate data
+      with censoring and/or missing values. The method is implemented in            an
+      R package clikcorr which calculates maximum likelihood estimates of the correlation
+      coefficient            when the data are modeled with either a Gaussian or a
+      Student t-distribution, in the presence of left,            right, or interval
+      censored and/or missing data. The R package includes functions for conducting            inference
+      and also provides graphical functions for visualizing the censored data scatter
+      plot and            profile log likelihood function. The performance of clikcorr
+      in a variety of circumstances is evaluated            through extensive simulation
+      studies. We illustrate the package using two dioxin exposure datasets.'
+    acknowledged: '2017-10-01'
+    online: '2018-08-17'
+    CRANpkgs:
+    - clikcorr
+    - survival
+    - mvtnorm
+    CTV_rev:
+    - ClinicalTrials
+    - Distributions
+    - Econometrics
+    - Finance
+    - Multivariate
+    - SocialSciences
+    - Survival
+    suppl: 3 Kb
+    landing: '2018'
+  - slug: RJ-2018-041
+    title: 'The utiml Package: Multi-label Classification in R'
+    bibtitle: 'The utiml Package: Multi-label Classification in R'
+    author:
+    - Adriano Rivolli
+    - Andre C. P. L. F. de Carvalho
+    bibauthor: Adriano Rivolli and Andre C. P. L. F. de Carvalho
+    abstract: '  Abstract Learning classification tasks in which each instance is
+      associated with one or more labels            are known as multi-label learning.
+      The implementation of multi-label algorithms, performed by            different
+      researchers, have several specificities, like input/output format, different
+      internal functions,            distinct programming language, to mention just
+      some of them. As a result, current machine learning            tools include
+      only a small subset of multi-label decomposition strategies. The utiml package
+      is a            framework for the application of classification algorithms to
+      multi-label data. Like the well known            MULAN used with Weka, it provides
+      a set of multi-label procedures such as sampling methods,            transformation
+      strategies, threshold functions, pre-processing techniques and evaluation metrics.
+      The            package was designed to allow users to easily perform complete
+      multi-label classification experiments            in the R environment. This
+      paper describes the utiml API and illustrates its use in different multi-label            classification
+      scenarios.'
+    acknowledged: '2017-04-07'
+    online: '2018-08-17'
+    CRANpkgs:
+    - mldr
+    - mlr
+    - MLPUGS
+    - utiml
+    - randomForest
+    - C50
+    - e1071
+    - parallel
+    CTV_rev:
+    - MachineLearning
+    - Environmetrics
+    - Cluster
+    - Distributions
+    - Multivariate
+    - Psychometrics
+    suppl: 1.3 Kb
+    landing: '2018'
+  - slug: RJ-2018-042
+    title: 'Dot-Pipe: an S3 Extensible Pipe for R'
+    bibtitle: 'Dot-Pipe: an S3 Extensible Pipe for R'
+    author:
+    - John Mount
+    - Nina Zumel
+    bibauthor: John Mount and Nina Zumel
+    abstract: '    Abstract Pipe notation is popular with a large league of R users,
+      with magrittr being the dominant              realization. However, this should
+      not be enough to consider piping in R as a completely settled topic              that
+      is not subject to further discussion, experiments, or the possibility of improvement.
+      To promote              innovation opportunities we describe wrapr “dot-pipe”,
+      a well behaved sequencing operator with S3              extensibility. In this
+      article we include a number of examples of using this pipe to interact with
+      and              extend other R packages.'
+    acknowledged: '2018-03-02'
+    online: '2018-08-17'
+    CRANpkgs:
+    - data.table
+    - magrittr
+    - dplyr
+    - future
+    - rmonad
+    - pipeR
+    - backpipe
+    - drake
+    - wrapr
+    - ggplot2
+    - rquery
+    CTV_rev:
+    - HighPerformanceComputing
+    - Finance
+    - Graphics
+    - ModelDeployment
+    - Phylogenetics
+    - WebTechnologies
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
