--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,57 @@ issues:
     - Phylogenetics
     - WebTechnologies
     landing: '2018'
+  - slug: RJ-2018-043
+    title: 'nsROC: An R package for non-standard ROC curve analysis'
+    bibtitle: 'nsROC: An R package for non-standard ROC curve analysis'
+    author:
+    - Sonia Pérez-Fernández
+    - Pablo Martínez-Camblor
+    - Peter Filzmoser
+    - Norberto Corral
+    bibauthor: |-
+      Sonia Pérez-Fernández and Pablo Martínez-Camblor and Peter
+                Filzmoser and Norberto Corral
+    abstract: ' Abstract The receiver operating characteristic (ROC) curve is a graphical
+      method which           has become standard in the analysis of diagnostic markers,
+      that is, in the study of the           classification ability of a numerical
+      variable. Most of the commercial statistical software           provide routines
+      for the standard ROC curve analysis. Of course, there are also many R           packages
+      dealing with the ROC estimation as well as other related problems. In this work           we
+      introduce the nsROC package which incorporates some new ROC curve procedures.           Particularly:
+      ROC curve comparison based on general distances among functions for both           paired
+      and unpaired designs; efficient confidence bands construction; a generalization
+      of the           curve considering different classification subsets than the
+      one involved in the classical defini          tion of the ROC curve; a procedure
+      to deal with censored data in cumulative-dynamic ROC           curve estimation
+      for time-to-event outcomes; and a non-parametric ROC curve method for           meta-analysis.
+      This is the only R package which implements these particular procedures.'
+    acknowledged: '2017-06-27'
+    online: '2018-08-17'
+    CRANpkgs:
+    - pROC
+    - ROCR
+    - plotROC
+    - fbroc
+    - OptimalCutpoints
+    - timeROC
+    - survivalROC
+    - HSROC
+    - sde
+    - tdROC
+    - survival
+    CTV_rev:
+    - Survival
+    - ClinicalTrials
+    - DifferentialEquations
+    - Econometrics
+    - Finance
+    - MachineLearning
+    - Multivariate
+    - SocialSciences
+    - TimeSeries
+    suppl: 1.4 Kb
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -13792,8 +13843,8 @@ issues:
     - 328
     - 341
   - slug: RJ-2018-039
-    title: "dimRed and coRanking - Unifying Dimensionality Reduction in R"
-    bibtitle: "dimRed and coRanking---Unifying Dimensionality Reduction in R"
+    title: dimRed and coRanking - Unifying Dimensionality Reduction in R
+    bibtitle: dimRed and coRanking---Unifying Dimensionality Reduction in R
     author:
     - Guido Kraemer
     - Markus Reichstein
