--- a/_config.yml
+++ b/_config.yml
@@ -174,6 +174,351 @@ issues:
     - TimeSeries
     suppl: 1.4 Kb
     landing: '2018'
+  - slug: RJ-2018-044
+    title: 'revengc: An R package to Reverse Engineer Summarized Data'
+    bibtitle: 'revengc: An R package to Reverse Engineer Summarized Data'
+    author:
+    - Samantha Duchscherer
+    - Robert Stewart
+    - Marie Urban
+    bibauthor: Samantha Duchscherer and Robert Stewart and Marie Urban
+    abstract: '  Abstract Decoupled (e.g. separate averages) and censored (e.g. >
+      100 species) variables are continually            reported by many well-established
+      organizations, such as the World Health Organization (WHO),            Centers
+      for Disease Control and Prevention (CDC), and World Bank. The challenge therefore
+      is to infer            what the original data could have been given summarized
+      information. We present an R package that            reverse engineers censored
+      and/or decoupled data with two main functions. The cnbinom.pars()            function
+      estimates the average and dispersion parameter of a censored univariate frequency
+      table. The            rec() function reverse engineers summarized data into
+      an uncensored bivariate table of probabilities.'
+    acknowledged: '2017-08-24'
+    online: '2018-12-07'
+    CRANpkgs:
+    - revengc
+    - truncdist
+    - mipfp
+    CTV_rev: OfficialStatistics
+    suppl: 2.1 Kb
+    landing: '2018'
+  - slug: RJ-2018-045
+    title: Basis-Adaptive Selection Algorithm in dr-package
+    bibtitle: Basis-Adaptive Selection Algorithm in dr-package
+    author: Jae Keun Yoo
+    bibauthor: Jae Keun Yoo
+    abstract: '  Abstract Sufficient dimension reduction (SDR) turns out to be a useful
+      dimension reduction tool in            high-dimensional regression analysis.
+      Weisberg (2002) developed the dr-package to implement the            four most
+      popular SDR methods. However, the package does not provide any clear guidelines
+      as            to which method should be used given a data. Since the four methods
+      may provide dramatically            different dimension reduction results, the
+      selection in the dr-package is problematic for statistical            practitioners.
+      In this paper, a basis-adaptive selection algorithm is developed in order to
+      relieve this            issue. The basic idea is to select an SDR method that
+      provides the highest correlation between the basis            estimates obtained
+      by the four classical SDR methods. A real data example and numerical studies            confirm
+      the practical usefulness of the developed algorithm.'
+    acknowledged: '2017-08-24'
+    online: '2018-12-07'
+    CRANpkgs: dr
+    CTV_rev:
+    - Multivariate
+    - SocialSciences
+    suppl: 2.2 Kb
+    landing: '2018'
+  - slug: RJ-2018-046
+    title: 'fICA: FastICA Algorithms and Their Improved Variants'
+    bibtitle: 'fICA: FastICA Algorithms and Their Improved Variants'
+    author:
+    - Jari Miettinen
+    - Klaus Nordhausen
+    - Sara Taskinen
+    bibauthor: Jari Miettinen and Klaus Nordhausen and Sara Taskinen
+    abstract: '  Abstract In independent component analysis (ICA) one searches for
+      mutually independent non           gaussian latent variables when the components
+      of the multivariate data are assumed to be linear            combinations of
+      them. Arguably, the most popular method to perform ICA is FastICA. There are            two
+      classical versions, the deflation-based FastICA where the components are found
+      one by one,            and the symmetric FastICA where the components are found
+      simultaneously. These methods have            been implemented previously in
+      two R packages, fastICA and ica. We present the R package fICA            and
+      compare it to the other packages. The additional features of the package include
+      for example            optimization of the extraction order in the deflation-based
+      version, possibility to use any nonlinearity            function, and improvement
+      to convergence of the deflation-based algorithm. The usage of the package            is
+      demonstrated by applying it to a real ECG data of a pregnant woman.'
+    acknowledged: '2017-09-21'
+    online: '2018-12-07'
+    CRANpkgs:
+    - fastICA
+    - ica
+    - fICA
+    - BSSasymp
+    CTV_rev:
+    - Psychometrics
+    - ChemPhys
+    - Multivariate
+    suppl: 1.1 Kb
+    landing: '2018'
+  - slug: RJ-2018-047
+    title: Spatial Uncertainty Propagation Analysis with the spup R Package
+    bibtitle: |-
+      Spatial Uncertainty Propagation Analysis with the spup R
+                Package
+    author:
+    - Kasia Sawicka
+    - Gerard B.M. Heuvelink
+    - Dennis J.J. Walvoort
+    bibauthor: |-
+      Kasia Sawicka and Gerard B.M. Heuvelink and Dennis J.J.
+                Walvoort
+    abstract: '  Abstract Many environmental and geographical models, such as those
+      used in land degradation,            agro-ecological and climate studies, make
+      use of spatially distributed inputs that are known im           perfectly. The
+      R package spup provides functions for examining the uncertainty propagation
+      from            input data and model parameters onto model outputs, via the
+      environmental model. The functions            include uncertainty model specification,
+      stochastic simulation and propagation of uncertainty using            Monte
+      Carlo (MC) techniques. Uncertain variables are described by probability distributions.
+      Both            numerical and categorical data types are handled. Spatial auto-correlation
+      within a variable and            cross-correlation between variables is accommodated
+      for. The MC realizations may be used as input            to the environmental
+      models written in or called from R. This article provides theoretical background            and
+      three worked examples that guide users through the application of spup.'
+    acknowledged: '2017-10-03'
+    online: '2018-12-07'
+    CRANpkgs:
+    - propagate
+    - errors
+    - metRology
+    - spup
+    - gstat
+    - mvtnorm
+    - graphics
+    - magrittr
+    - methods
+    - purrr
+    - raster
+    - whisker
+    - dplyr
+    - GGally
+    - gridExtra
+    - knitr
+    - readr
+    - sp
+    - roxygen2
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    - ChemPhys
+    - WebTechnologies
+    - Databases
+    - Distributions
+    - Finance
+    - ModelDeployment
+    - Multivariate
+    - ReproducibleResearch
+    suppl: 3.3 Kb
+    landing: '2018'
+  - slug: RJ-2018-048
+    title: 'clustMixType: User-Friendly Clustering of Mixed-Type Data in R'
+    bibtitle: |-
+      clustMixType: User-Friendly Clustering of Mixed-Type Data in
+                R
+    author: Gero Szepannek
+    bibauthor: Gero Szepannek
+    abstract: '  Abstract Clustering algorithms are designed to identify groups in
+      data where traditionally the            emphasis in research has been on numeric
+      data and in consequence most traditional algorithms are            devoted to
+      this kind of data. A gap has uprised from industrial praxis by the fact that
+      in most business            applications the variables are of both types: numeric
+      and categorical. In recent past an increasing            number of algorithms
+      for clustering of mixed-type data has been proposed. Many of these are based            on
+      the idea of Huang’s k-prototypes algorithm. This paper describes the R package
+      clustMixType            which provides an implementation of this algorithm in
+      R.'
+    acknowledged: '2017-10-30'
+    online: '2018-12-07'
+    CRANpkgs:
+    - gower
+    - cluster
+    - CluMix
+    - flexclust
+    - fpc
+    - clustMD
+    - kamila
+    - clustMixType
+    - klaR
+    - wesanderson
+    - clusteval
+    CTV_rev:
+    - Cluster
+    - Multivariate
+    - Environmetrics
+    - Graphics
+    - MachineLearning
+    - Robust
+    suppl: 1.1 Kb
+    landing: '2018'
+  - slug: RJ-2018-049
+    title: 'Stilt: Easy Emulation of Time Series AR(1) Computer Model Output in Multidimensional
+      Parameter Space'
+    bibtitle: |-
+      Stilt: Easy Emulation of Time Series AR(1) Computer Model
+                Output in Multidimensional Parameter Space
+    author:
+    - Roman Olson
+    - Kelsey L. Ruckert
+    - Won Chang
+    - Klaus Keller
+    - Murali Haran
+    - Soon-Il An
+    bibauthor: |-
+      Roman Olson and Kelsey L. Ruckert and Won Chang and Klaus
+                Keller and Murali Haran and Soon-Il An
+    abstract: '  Abstract A common problem in climate science and other fields is
+      one of statistically approximating            (“emulating”) time series model
+      output in parameter space. There are many packages for spatio           temporal
+      modeling. However, they often lack focus on time series, and exhibit statistical
+      complexity.            Here, we present the R package stilt designed for simplified
+      AR(1) timeseries Gaussian Process            emulation, and provide examples
+      relevant to climate modelling. Notably absent is Markov chain            Monte
+      Carlo estimation – a challenging concept to many scientists. We keep the number
+      of user            choices to a minimum. Hence, the package can be useful pedagogically,
+      while still applicable to real            life emulation problems. We provide
+      functions for emulator cross-validation, empirical coverage,            prediction,
+      as well as response surface plotting. While the examples focus on climate model
+      emulation,            the emulator is general and can be also used for kriging
+      spatio-temporal data.'
+    acknowledged: '2017-11-16'
+    online: '2018-12-07'
+    CRANpkgs:
+    - gstat
+    - mlegp
+    - spBayes
+    - ramps
+    - spTimer
+    - RandomFields
+    - stilt
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    - Bayesian
+    - TimeSeries
+    suppl: 1.4 Kb
+    landing: '2018'
+  - slug: RJ-2018-050
+    title: 'SMM: An R Package for Estimation and Simulation of Discrete-time semi-Markov
+      Models'
+    bibtitle: |-
+      SMM: An R Package for Estimation and Simulation of Discrete-
+                time semi-Markov Models
+    author:
+    - Vlad Stefan Barbu
+    - Caroline Bérard
+    - Dominique Cellier
+    - Mathilde Sautreuil
+    - Nicolas Vergne
+    bibauthor: |-
+      Vlad Stefan Barbu and Caroline Bérard and Dominique Cellier
+                and Mathilde Sautreuil and Nicolas Vergne
+    abstract: '  Abstract Semi-Markov models, independently introduced by Lévy (1954),
+      Smith (1955) and Takacs            (1954), are a generalization of the well-known
+      Markov models. For semi-Markov models, sojourn            times can be arbitrarily
+      distributed, while sojourn times of Markov models are constrained to be            exponentially
+      distributed (in continuous time) or geometrically distributed (in discrete time).
+      The aim            of this paper is to present the R package SMM, devoted to
+      the simulation and estimation of discrete           time multi-state semi-Markov
+      and Markov models. For the semi-Markov case we have considered:            parametric
+      and non-parametric estimation; with and without censoring at the beginning and/or
+      at the            end of sample paths; one or several independent sample paths.
+      Several discrete-time distributions            are considered for the parametric
+      estimation of sojourn time distributions of semi-Markov chains:            Uniform,
+      Geometric, Poisson, Discrete Weibull and Binomial Negative.'
+    acknowledged: '2017-11-28'
+    online: '2018-12-07'
+    CRANpkgs:
+    - SMM
+    - semiMarkov
+    - hsmm
+    - mhsmm
+    landing: '2018'
+  - slug: RJ-2018-051
+    title: ggplot2 Compatible Quantile-Quantile Plots in R
+    bibtitle: ggplot2 Compatible Quantile-Quantile Plots in R
+    author:
+    - Alexandre Almeida
+    - Adam Loy
+    - Heike Hofmann
+    bibauthor: Alexandre Almeida and Adam Loy and Heike Hofmann
+    abstract: ' Abstract Q-Q plots allow us to assess univariate distributional assumptions
+      by comparing a set of           quantiles from the empirical and the theoretical
+      distributions in the form of a scatterplot. To aid in           the interpretation
+      of Q-Q plots, reference lines and confidence bands are often added. We can also           detrend
+      the Q-Q plot so the vertical comparisons of interest come into focus. Various
+      implementations           of Q-Q plots exist in R, but none implements all of
+      these features. qqplotr extends ggplot2 to provide           a complete implementation
+      of Q-Q plots. This paper introduces the plotting framework provided by           qqplotr
+      and provides multiple examples of how it can be used.'
+    acknowledged: '2017-12-20'
+    online: '2018-12-07'
+    CRANpkgs:
+    - car
+    - ggplot2
+    - qqplotr
+    - robustbase
+    - boot
+    CTV_rev:
+    - Econometrics
+    - Multivariate
+    - SocialSciences
+    - Finance
+    - Graphics
+    - Optimization
+    - Phylogenetics
+    - Robust
+    - Survival
+    - TimeSeries
+    suppl: 2.4 Kb
+    landing: '2018'
+  - slug: RJ-2018-052
+    title: Forecast Combinations in R using the ForecastComb Package
+    bibtitle: Forecast Combinations in R using the ForecastComb Package
+    author:
+    - Christoph E. Weiss
+    - Eran Raviv
+    - Gernot Roetzer
+    bibauthor: Christoph E. Weiss and Eran Raviv and Gernot Roetzer
+    abstract: '  Abstract This paper introduces the R package ForecastComb. The aim
+      is to provide researchers and            practitioners with a comprehensive
+      implementation of the most common ways in which forecasts can            be
+      combined. The package in its current version covers 15 popular estimation methods
+      for creating a            combined forecasts – including simple methods, regression-based
+      methods, and eigenvector-based            methods. It also includes useful tools
+      to deal with common challenges of forecast combination (e.g.,            missing
+      values in component forecasts, or multicollinearity), and to rationalize and
+      visualize the            combination results.'
+    acknowledged: '2017-12-20'
+    online: '2018-12-07'
+    CRANpkgs:
+    - BMA
+    - opera
+    - forecastHybrid
+    - ForecastCombinations
+    - GeomComb
+    - quadprog
+    - mtsdi
+    - forecTheta
+    CTV_rev:
+    - TimeSeries
+    - Bayesian
+    - Econometrics
+    - OfficialStatistics
+    - Optimization
+    - SocialSciences
+    - Survival
+    suppl: 1.2 Kb
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
