--- a/_config.yml
+++ b/_config.yml
@@ -1259,6 +1259,150 @@ issues:
     - Multivariate
     suppl: 3.1 Kb
     landing: '2018'
+  - slug: RJ-2018-070
+    title: SARIMA Analysis and Automated Model Reports with BETS, an R Package
+    bibtitle: |-
+      SARIMA Analysis and Automated Model Reports with BETS, an R
+                Package
+    author:
+    - Talitha F. Speranza
+    - Pedro C. Ferreira
+    - Jonatha A. da Costa
+    bibauthor: |-
+      Talitha F. Speranza and Pedro C. Ferreira and Jonatha A. da
+                Costa
+    abstract: '  Abstract This article aims to demonstrate how the powerful features
+      of the R package BETS can be            applied to SARIMA time series analysis.
+      BETS provides not only thousands of Brazilian economic            time series
+      from different institutions, but also a range of analytical tools and educational
+      resources. In            particular, BETS is capable of generating automated
+      model reports for any given time series. These            reports rely on a
+      single function call and are able to build three types of models (SARIMA being
+      one of            them), needing few inputs and outputting rich content. The
+      output varies according to the inputs and            usually consists of a summary
+      of the series properties, step by step explanations on how the model            was
+      developed and predicitions made by the model, as well as a file containing these
+      predictions. This            work focuses on this feature and several other
+      BETS functions that are designed to help the time series            modeler.
+      We present them in a thorough case study: the SARIMA approach to model and forecast
+      the            Brazilian production of intermediate goods index series.'
+    acknowledged: '2017-09-13'
+    online: '2018-12-11'
+    CRANpkgs:
+    - BETS
+    - forecast
+    - mFilter
+    - urca
+    - seasonal
+    - httr
+    - rvest
+    - RMySQL
+    - rmarkdown
+    - stats
+    - dygraphs
+    CTV_rev:
+    - TimeSeries
+    - Econometrics
+    - Finance
+    - WebTechnologies
+    - Databases
+    - Environmetrics
+    - MissingData
+    - OfficialStatistics
+    - ReproducibleResearch
+    landing: '2018'
+  - slug: RJ-2018-072
+    title: 'Explanations of model predictions with live and breakDown packages '
+    bibtitle: |-
+      Explanations of model predictions with live and breakDown
+                packages
+    author:
+    - Mateusz Staniak
+    - Przemysław Biecek
+    bibauthor: Mateusz Staniak and Przemysław Biecek
+    abstract: '  Abstract Complex models are commonly used in predictive modeling.
+      In this paper we present R            packages that can be used for explaining
+      predictions from complex black box models and attributing            parts of
+      these predictions to input features. We introduce two new approaches and corresponding            packages
+      for such attribution, namely live and breakDown. We also compare their results
+      with            existing implementations of state-of-the-art solutions, namely,
+      lime (Pedersen and Benesty, 2017)            which implements Locally Interpretable
+      Model-agnostic Explanations and iml (Molnar et al., 2018) which            implements
+      Shapley values.'
+    acknowledged: '2018-05-01'
+    online: '2018-12-11'
+    CRANpkgs:
+    - live
+    - breakDown
+    - lime
+    - iml
+    - pdp
+    - caret
+    - mlr
+    - DALEX
+    - archivist
+    - xgboost
+    - party
+    - data.table
+    - e1071
+    - glmnet
+    - randomForest
+    CTV_rev:
+    - MachineLearning
+    - Environmetrics
+    - HighPerformanceComputing
+    - Multivariate
+    - Survival
+    - Cluster
+    - Distributions
+    - Finance
+    - MissingData
+    - ModelDeployment
+    - Psychometrics
+    - ReproducibleResearch
+    suppl: 1.7 Kb
+    landing: '2018'
+  - slug: RJ-2018-073
+    title: 'bnclassify: Learning Bayesian Network Classifiers'
+    bibtitle: 'bnclassify: Learning Bayesian Network Classifiers'
+    author:
+    - Bojan Mihaljević
+    - Concha Bielza
+    - Pedro Larrañaga
+    bibauthor: Bojan Mihaljević and Concha Bielza and Pedro Larrañaga
+    abstract: '  Abstract The bnclassify package provides state-of-the art algorithms
+      for learning Bayesian network            classifiers from data. For structure
+      learning it provides variants of the greedy hill-climbing search,            a
+      well-known adaptation of the Chow-Liu algorithm and averaged one-dependence
+      estimators. It            provides Bayesian and maximum likelihood parameter
+      estimation, as well as three naive-Bayes           specific methods based on
+      discriminative score optimization and Bayesian model averaging. The            implementation
+      is efficient enough to allow for time-consuming discriminative scores on medium           sized
+      data sets. The bnclassify package provides utilities for model evaluation, such
+      as cross-validated            accuracy and penalized log-likelihood scores,
+      and analysis of the underlying networks, including            network plotting
+      via the Rgraphviz package. It is extensively tested, with over 200 automated
+      tests            that give a code coverage of 94%. Here we present the main
+      functionalities, illustrate them with a            number of data sets, and
+      comment on related software.'
+    acknowledged: '2018-05-29'
+    online: '2018-12-11'
+    CRANpkgs:
+    - bnlearn
+    - bnclassify
+    - caret
+    - mlr
+    - gRain
+    - deal
+    BIOpkgs: Rgraphviz
+    CTV_rev:
+    - Bayesian
+    - gR
+    - HighPerformanceComputing
+    - MachineLearning
+    - Multivariate
+    suppl: 833 bytes
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
