--- a/_config.yml
+++ b/_config.yml
@@ -1403,6 +1403,133 @@ issues:
     - Multivariate
     suppl: 833 bytes
     landing: '2018'
+  - slug: RJ-2018-074
+    title: ShinyItemAnalysis for Teaching Psychometrics and to Enforce Routine Analysis
+      of Educational Tests
+    bibtitle: |-
+      ShinyItemAnalysis for Teaching Psychometrics and to Enforce
+                Routine Analysis of Educational Tests
+    author:
+    - Patrícia Martinková
+    - Adéla Drabinová
+    bibauthor: Patrícia Martinková and Adéla Drabinová
+    abstract: '  Abstract This work introduces ShinyItemAnalysis an R package and
+      an online shiny application for            psychometric analysis of educational
+      tests and items. ShinyItemAnalysis covers a broad range of psy           chometric
+      methods and offers data examples, model equations, parameter estimates, interpretation
+      of            results, together with a selected R code, and is therefore suitable
+      for teaching psychometric concepts            with R. Furthermore, the application
+      aspires to be an easy-to-use tool for analysis of educational            tests
+      by allowing the users to upload and analyze their own data and to automatically
+      generate            analysis reports in PDF or HTML. We argue that psychometric
+      analysis should be a routine part of            test development in order to
+      gather proofs of reliability and validity of the measurement, and we            demonstrate
+      how ShinyItemAnalysis may help enforce this goal.'
+    acknowledged: '2018-06-29'
+    online: '2018-12-13'
+    CRANpkgs:
+    - psych
+    - ltm
+    - difR
+    - lavaan
+    - ShinyItemAnalysis
+    - mirt
+    - corrplot
+    - cowplot
+    - CTT
+    - data.table
+    - deltaPlotR
+    - difNLR
+    - DT
+    - ggdendro
+    - ggplot2
+    - gridExtra
+    - knitr
+    - latticeExtra
+    - moments
+    - msm
+    - nnet
+    - plotly
+    - psychometric
+    - reshape2
+    - rmarkdown
+    - shiny
+    - shinyBS
+    - shinydashboard
+    - shinyjs
+    - stringr
+    - xtable
+    CTVs: Psychometrics
+    CTV_rev:
+    - Psychometrics
+    - ReproducibleResearch
+    - MissingData
+    - Distributions
+    - Econometrics
+    - Graphics
+    - WebTechnologies
+    - Finance
+    - HighPerformanceComputing
+    - MachineLearning
+    - MetaAnalysis
+    - Multivariate
+    - OfficialStatistics
+    - Phylogenetics
+    - SocialSciences
+    - Survival
+    suppl: 601.1 Kb
+    landing: '2018'
+  - slug: RJ-2018-075
+    title: Measurement Errors in R
+    bibtitle: Measurement Errors in R
+    author:
+    - Iñaki Ucar
+    - Edzer Pebesma
+    - Arturo Azcorra
+    bibauthor: Iñaki Ucar and Edzer Pebesma and Arturo Azcorra
+    abstract: '  Abstract This paper presents an R package to handle and represent
+      measurements with errors in a            very simple way. We briefly introduce
+      the main concepts of metrology and propagation of uncertainty,            and
+      discuss related R packages. Building upon this, we introduce the errors package,
+      which provides            a class for associating uncertainty metadata, automated
+      propagation and reporting. Working with            errors enables transparent,
+      lightweight, less error-prone handling and convenient representation            of
+      measurements with errors. Finally, we discuss the advantages, limitations and
+      future work of            computing with errors.'
+    acknowledged: '2018-08-09'
+    online: '2018-12-13'
+    CRANpkgs:
+    - units
+    - errors
+    - car
+    - msm
+    - metRology
+    - propagate
+    - spup
+    - distr
+    - distrEllipse
+    - distrEx
+    - distrMod
+    - distrRmetrics
+    - distrSim
+    - distrTeach
+    - magrittr
+    - ggplot2
+    - tibble
+    CTV_rev:
+    - Distributions
+    - ChemPhys
+    - Econometrics
+    - Finance
+    - Graphics
+    - Multivariate
+    - Phylogenetics
+    - Robust
+    - SocialSciences
+    - Survival
+    - WebTechnologies
+    suppl: 1.4 Kb
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
