--- a/_config.yml
+++ b/_config.yml
@@ -1530,6 +1530,46 @@ issues:
     - WebTechnologies
     suppl: 1.4 Kb
     landing: '2018'
+  - slug: RJ-2018-076
+    title: Dynamic Simulation and Testing for Single-Equation Cointegrating and Stationary
+      Autoregressive Distributed Lag Models
+    bibtitle: |-
+      Dynamic Simulation and Testing for Single-Equation
+                Cointegrating and Stationary Autoregressive Distributed Lag
+                Models
+    author:
+    - Soren Jordan
+    - Andrew Q. Philips
+    bibauthor: Soren Jordan and Andrew Q. Philips
+    abstract: '  Abstract While autoregressive distributed lag models allow for extremely
+      flexible dynamics, interpret           ing the substantive significance of complex
+      lag structures remains difficult. In this paper we discuss            dynamac
+      (dynamic autoregressive and cointegrating models), an R package designed to
+      assist users in            estimating, dynamically simulating, and plotting
+      the results of a variety of autoregressive distributed            lag models.
+      It also contains a number of post-estimation diagnostics, including a test for
+      cointegration            for when researchers are estimating the error-correction
+      variant of the autoregressive distributed lag            model.'
+    acknowledged: '2018-05-29'
+    online: '2018-12-31'
+    CRANpkgs:
+    - dynsim
+    - Zelig
+    - urca
+    - MASS
+    CTV_rev:
+    - Econometrics
+    - Finance
+    - SocialSciences
+    - Distributions
+    - Environmetrics
+    - Multivariate
+    - NumericalMathematics
+    - Psychometrics
+    - Robust
+    - TimeSeries
+    suppl: 1.2 Kb
+    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
