--- a/_config.yml
+++ b/_config.yml
@@ -14472,8 +14472,8 @@ issues:
   year: 2019
   volume: 10
   num: 2
-  month: February
-  bibmonth: february
+  month: Feb.
+  bibmonth: feb
   articles:
   - slug: editorial
     cat: Editorial
