--- a/_config.yml
+++ b/_config.yml
@@ -2,80 +2,6 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
-  - slug: RJ-2018-062
-    title: Consistency Cubes
-    bibtitle: Consistency Cubes
-    author: Adrian Dusa
-    bibauthor: Adrian Dusa
-    abstract: A lot of effort has been spent over the past few decades in the QCA
-      methodology field, to develop efficient Boolean minimization algorithms to derive
-      an exact, and more importantly complete list of minimal prime implicants that
-      explain the initial, observed positive configurations.      As the complexity
-      grows exponentially with every new condition, the required computer memory goes
-      past the current computer resources and the polynomial time required to solve
-      this problem quickly grows towards infinity.      This paper introduces a new
-      alternative to the existing non-polynomial attempts. It completely solves the
-      memory problem, and preliminary tests show it is exponentially hundreds of time
-      faster than eQMC, the current “best” algorithm for QCA in R, and probes into
-      a territory where it competes and even outperforms engineering algorithms such
-      as Espresso, for exact minimizations.      While speed is not much of an issue
-      now (eQMC is fast enough for simple data), it might prove to be essential when
-      further developing towards all possible temporal orders, or searching for configurations
-      in panel data over time, combined with / or automatic detection of difficult
-      counterfactuals etc.
-    acknowledged: '2018-05-01'
-    online: '2018-12-08'
-    CRANpkgs:
-    - QCA
-    - lpSolve
-    - venn
-    - LogicOpt
-    CTV_rev: Optimization
-    suppl: 1.8 Kb
-    landing: '2018'
-  - slug: RJ-2018-067
-    title: 'The politeness Package: Detecting Politeness in Natural Language'
-    bibtitle: |-
-      The politeness Package: Detecting Politeness in Natural
-                Language
-    author:
-    - Michael Yeomans
-    - Alejandro Kantor
-    - Dustin Tingley
-    bibauthor: Michael Yeomans and Alejandro Kantor and Dustin Tingley
-    abstract: '  Abstract This package provides tools to extract politeness markers
-      in English natural language. It            also allows researchers to easily
-      visualize and quantify politeness between groups of documents.            This
-      package combines and extends prior research on the linguistic markers of politeness
-      (Brown            and Levinson, 1987; Danescu-Niculescu-Mizil et al., 2013;
-      Voigt et al., 2017). We demonstrate two            applications for detecting
-      politeness in natural language during consequential social interactions            distributive
-      negotiations, and speed dating.'
-    acknowledged: '2018-05-29'
-    online: '2018-12-08'
-    CRANpkgs:
-    - tidytext
-    - tm
-    - quanteda
-    - coreNLP
-    - spacyR
-    - SentimentAnalysis
-    - syuzhet
-    - topicmodeling
-    - stm
-    - glmnet
-    - textir
-    - hunspell
-    - data.table
-    - politeness
-    CTV_rev:
-    - NaturalLanguageProcessing
-    - HighPerformanceComputing
-    - Finance
-    - MachineLearning
-    - Survival
-    suppl: 1.8 Kb
-    landing: '2018'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -14478,8 +14404,8 @@ issues:
   - slug: editorial
     cat: Editorial
     author: John Verzani
-    title: ~
-    bibtitle: []
+    title: Editorial
+    bibtitle: Editorial
     bibauthor: John Verzani
     pages:
     - 4
